--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="hello_world">Здравствуй мир!</string>
     <string name="app_name">ZaycevNetTask2</string>
-    <string name="hello_world">Hello World!</string>
+    <string name="result_value">Приложение запущено %d раз(а)</string>
 </resources>
